--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -803,51 +803,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.11880806551510564"
+       "0.11959749882133504"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p_new = df2.query('landing_page == \"new_page\" ')['converted'].mean()\n",
+    "p_new = df2['converted'].mean()\n",
     "p_new"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1203863045004612"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_old = df2.query('landing_page == \"old_page\" ')['converted'].mean()\n",
-    "p_old"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the convert rate is asked to be under the null we need to consider that p_new = p_old and hence we will need to calculate the mean of to values [p_new,p_old]   to calculate the probability under the null."
+    "b. What is the **convert rate** for $p_{old}$ under the null? <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11959749882133504"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_old = df2['converted'].mean()\n",
+    "p_old"
    ]
   },
   {
@@ -859,49 +859,6 @@
    "outputs": [],
    "source": [
     "p_mean = np.mean([p_new, p_old])  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.0015782389853555567"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "diff = p_new - p_old\n",
-    "diff    #not under null"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Hence, the alternative hypothesis fails here, So p_new = 0.1188 and p_old = 0.1203 the p_new under the null can be stated as \n",
-    "p_mean = p_old = p_new : 0.1196"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "b. What is the **convert rate** for $p_{old}$ under the null? <br><br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Following to null hypothesis, p_mean = p_old = p_new : 0.1196 . Hence, p_old = 0.1196"
    ]
   },
   {
@@ -1185,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -1193,12 +1150,12 @@
      "output_type": "stream",
      "text": [
       "Z-score:  -1.31092419842\n",
-      "P_value:  0.189883374482\n"
+      "P_value:  0.905058312759\n"
      ]
     }
    ],
    "source": [
-    "z_score, p_value = sm.stats.proportions_ztest(count=[convert_new, convert_old], nobs=[n_new, n_old])\n",
+    "z_score, p_value = sm.stats.proportions_ztest(count=[convert_new, convert_old], nobs=[n_new, n_old], alternative = 'larger')\n",
     "print(\"Z-score: \",z_score)\n",
     "print(\"P_value: \",p_value)"
    ]
@@ -1214,7 +1171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**a z-score is the number of standard deviations from the mean a data point is. But more technically it's a measure of how many standard deviations below or above the population mean a raw score is.** So from this we can say that the difference between the data points in the histogram is -0.00328 standard deviations below the mean population, and the p-value is 0.1898 which suggests that there is approximately 19% percent chances of existing this condition but this is not enough to reject the null hypothesis."
+    "**a z-score is the number of standard deviations from the mean a data point is. But more technically it's a measure of how many standard deviations below or above the population mean a raw score is.** So from this we can say that the difference between the data points in the histogram is -0.00328 standard deviations below the mean population, and the p-value is 0.9050 which suggests that there is approximately 90% percent chances of existing this condition but this is not enough to reject the null hypothesis."
    ]
   },
   {
@@ -1480,7 +1437,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**So the p-value for ab_page here is 0.190 ** which is quiet lower than the p-value calculated before, because In this datafrane I added an intercept column to the dataset which accounts for error. So we can be assured that the value is aproximately equal to the actual."
+    "**So the p-value for ab_page here is 0.190 ** which is quiet lower than the p-value calculated before, because In this we are performing regression analysis which accounts for two tailed test. and what we did in the Part II was one tail analysis so in this case we can consider the hypothesis to be as follows:\n",
+    "\n",
+    "$$ H0: p_{new} = p_{old} $$\n",
+    "$$ H1: p_{new} \\neq  p_{old} $$\n",
+    "\n",
+    "In the Part II we had a alternatve which as to prove the p{new} and p{old} are unequal which is one sided test. Here the treatment group or ab_page has as a p-value of 0.19 which is significant."
    ]
   },
   {
